package com.rpl.mastodon.serialization;

import com.rpl.mastodon.data.*;
import java.util.*;

public class MastodonSerialization extends ThriftSerialization {
  @Override
  protected Map<Integer, Class> typeIds() {
    Map<Integer, Class> ret = new HashMap<>();
    Class[] classes = {
            KeyValuePair.class,
            LocalAccount.class,
            RemoteAccount.class,
            AccountContent.class,
            Account.class,
            AccountWithId.class,
            IndexedAccountWithId.class,
            Follower.class,
            BlockAccount.class,
            RemoveBlockAccount.class,
            FollowAccount.class,
            RemoveFollowAccount.class,
            FollowLockedAccount.class,
            AcceptFollowRequest.class,
            RejectFollowRequest.class,
            MuteAccount.class,
            RemoveMuteAccount.class,
            FeatureAccount.class,
            RemoveFeatureAccount.class,
            FeatureHashtag.class,
            RemoveFeatureHashtag.class,
            IndexedFeatureHashtag.class,
            Status.class,
            StatusContent.class,
            NormalStatusContent.class,
            ReplyStatusContent.class,
            BoostStatusContent.class,
            AddStatus.class,
            EditStatus.class,
            StatusWithId.class,
            StatusResultWithId.class,
            IndexedStatusResultWithId.class,
            StatusQueryResults.class,
            StatusMetadata.class,
            StatusResult.class,
            StatusResultContent.class,
            RemoveStatus.class,
            RemoveStatusWithId.class,
            Conversation.class,
            EditConversation.class,
            RemoveConversation.class,
            FollowHashtag.class,
            RemoveFollowHashtag.class,
            FollowerFanout.class,
            HashtagFanout.class,
            ListFanout.class,
            AccountList.class,
            AccountListWithId.class,
            RemoveAccountList.class,
            AccountListMember.class,
            RemoveAccountListMember.class,
            Filter.class,
            FilterWithId.class,
            AddFilter.class,
            EditFilter.class,
            RemoveFilter.class,
            UpdateKeyword.class,
            EditFilterKeyword.class,
            AddStatusToFilter.class,
            RemoveStatusFromFilter.class,
            BoostStatus.class,
            RemoveBoostStatus.class,
            FavoriteStatus.class,
            RemoveFavoriteStatus.class,
            BookmarkStatus.class,
            RemoveBookmarkStatus.class,
            MuteStatus.class,
            RemoveMuteStatus.class,
            PinStatus.class,
            RemovePinStatus.class,
            EditAccount.class,
            EditAccountField.class,
            AddAuthCode.class,
            RemoveAuthCode.class,
            StatusSearchRecord.class,
            ProfileSearchRecord.class,
            ReviewItem.class,
            RemoveReviewItem.class,
            AccountRelationshipQueryResult.class,
            RemoveFollowSuggestion.class,
            QueryFilterOptions.class,
            ItemStats.class,
            PollVote.class,
            PollInfo.class,
            PollContent.class,
            StatusPointer.class,
            Attachment.class,
            AttachmentWithId.class,
            Notification.class,
            NotificationContent.class,
            StatusResponseNotificationContent.class,
            DismissNotification.class,
            FeaturedHashtagInfo.class,
            MuteAccountOptions.class,
            AddScheduledStatus.class,
            EditScheduledStatusPublishTime.class,
            AccountMetadata.class,
            Marker.class,
            Note.class
    };
    for (int i = 0; i < classes.length; i++) ret.put(i, classes[i]);
    return ret;
  }
}
